# CAD_P1

./: .gitignore  CMakeLists.txt  README  README.md  README.texttile  run_experiments.sh
cmake/: CMakeLists.googletest.in
include/: cadlabs.hpp  container_ops.h  functions.h  get_output.h  image.h  nbody.h  nbody_tools.h  nbody_universe.h  par_nbody_all_pairs.h  ui.h  xstuff.h
include/marrow/: timer.h
include/marrow/utils/: timer.hpp
include/nbody/: cuda_nbody_all_pairs.h  cuda_nbody_first.h  cuda_nbody_gmem_no_cycles.h  cuda_nbody_smem_no_cycles.h  data_types.h  nbody_tools.h  nbody_universe.h  xstuff.h
include/wb/: wb.h  wbComparator.h  wbFile.h  wbImage.h  wbImport.h  wbLogger.h  wbString.h
scripts/: run_nbody_experiments.sh
src/: CMakeLists.txt  addarray_cuda.cu  card_info.cu
src/CUDA/: CMakeLists.txt  cuda_nbody_all_pairs.cu  cuda_nbody_first.cu  cuda_nbody_gmem_no_cycles.cu  cuda_nbody_main.cpp  cuda_nbody_main_first.cpp  cuda_nbody_main_gmem_no_cycles.cpp  cuda_nbody_main_smem_no_cycles.cpp  cuda_nbody_smem_no_cycles.cu  vector_add_cuda.cu
src/CUDA1CycleParallel/: CMakeLists.txt  cuda_nbody_all_pairs.cu
src/CUDA2CyclesParallelGlobalMem/: CMakeLists.txt  cuda_nbody_all_pairs.cu
src/Cuda2CyclesKernel7/: CMakeLists.txt
src/PAR/: CMakeLists.txt  README.md
src/SEQ/: CMakeLists.txt  main.cpp  nbody_all_pairs.cpp  nbody_alloc.cpp  nbody_tools.cpp  universe_generation.cpp  xstuff.cpp
src/lab1/: CMakeLists.txt  README.md  get_output.cpp  get_output.h  main.c  main.cpp  nbody_all_pairs.c  nbody_all_pairs.cpp  nbody_alloc.cpp  nbody_brute_force.c  nbody_tools.c  nbody_tools.cpp  par_nbody_all_pairs.c  par_nbody_brute_force.c  ui.c  ui.cpp  universe_generation.c  universe_generation.cpp  xstuff.c
src/lab2/: CMakeLists.txt  README.md  main.cpp  par_nbody_all_pairs.cpp
src/lab3/: CMakeLists.txt  README.md  card_info.cu  cuda_nbody_all_pairs.cu  cuda_nbody_all_pairs.orig  cuda_nbody_main.cpp
src/wb/: CMakeLists.txt  wbFile.cpp  wbImage.cpp  wbImport.cpp  wbInit.cpp  wbPPM.cpp
test/: CMakeList.test.in  CMakeLists.txt  CMakeLists.txt.in  cad_test.h
test/functions/: CMakeLists.txt  array_add_test.cu
test/image/: CMakeLists.txt  image_test.cu
test/lab2/: CMakeLists.txt  par_nbody_all_pairs_test.cpp
test/lab3/: CMakeLists.txt  cuda_nbody_all_pairs_test.cu  vector_add_cuda_test.cu
